syntax = "proto3";

package bettery.events.v1;

import "amino/amino.proto";
import "bettery/events/v1/params.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "bettery/x/events/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  // UpdateParams defines a (governance) operation for updating the module
  // parameters. The authority defaults to the x/gov module account.
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);

  // CreateEvent defines the CreateEvent RPC.
  rpc CreateEvent(MsgCreateEvent) returns (MsgCreateEventResponse);

  // CreatePartEvent defines the CreatePartEvent RPC.
  rpc CreatePartEvent(MsgCreatePartEvent) returns (MsgCreatePartEventResponse);

  // ValidateEvent defines the ValidateEvent RPC.
  rpc ValidateEvent(MsgValidateEvent) returns (MsgValidateEventResponse);
}

// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "bettery/x/events/MsgUpdateParams";

  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // params defines the module parameters to update.

  // NOTE: All parameters must be supplied.
  Params params = 2 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}

// MsgCreateEvent defines the MsgCreateEvent message.
message MsgCreateEvent {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string question = 2;
  repeated string answers = 3;
  uint64 end_time = 4;
  string category = 5;
}

// MsgCreateEventResponse defines the MsgCreateEventResponse message.
message MsgCreateEventResponse {
  uint64 id = 1;
}

// MsgCreatePartEvent defines the MsgCreatePartEvent message.
message MsgCreatePartEvent {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 event_id = 2;
  string answers = 3;
  string amount = 4;
  uint64 answer_index = 5;
  string token = 6;
}

// MsgCreatePartEventResponse defines the MsgCreatePartEventResponse message.
message MsgCreatePartEventResponse {}

// MsgValidateEvent defines the MsgValidateEvent message.
message MsgValidateEvent {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 event_id = 2;
  uint64 answer_index = 3;
  string answers = 4;
  string source = 5;
}

// MsgValidateEventResponse defines the MsgValidateEventResponse message.
message MsgValidateEventResponse {}
